# deek

./: .env.example  .gitignore  CAIRN_COWORK.md  CAIRN_MCP_SPEC.md  CAIRN_MODULES.md  CAIRN_PROTOCOL.md  CAIRN_QUICKSTART.md  CLAUDE.md  DEEK_IDENTITY.md  DEEK_MODULES.md  DEEK_MODULES.yaml  NBNE_PROTOCOL.md  README.md  build-cairn.bat  cairn.bat  cairn.ps1  pyproject.toml  restart-claw.bat  start-claw.bat  stop-claw.bat
.claude/: settings.local.json
api/: main.py
briefs/: crm-cairn-tables-and-backfill.md  crm-project-folder-endpoint.md  crm-quote-generator.md  crm-write-endpoints.md  deek-memory-growth-dashboard.md  deek-voice-ambient-v2.md  jo-pip-mobile-design.md  jo-pip-v0-handover.md  jo-pip-v0-spec.md  jo-rex-install-email.md  pip-product-spec-v0.3.md  telegram-webhook-async-ack.md  triage-phase-d-similarity-surfacing.md
config/: retrieval.yaml
core/: agent.py  wiggum.py
deploy/: Dockerfile.api  build-cairn-api.sh  docker-compose.yml  modules.json
docs/: CROSSLINK_GRAPH.md  DREAM_STATE.md  IMPRESSIONS.md  MEMORY_BRIEF.md  TELEGRAM_NUDGES_SETUP.md
mcp/: cairn_mcp_server.py
scripts/: ad_spend_per_sku.py  ads_auth.py  analyze_graph_shadow.py  backfill_jo_inbox.py  backup-deek.sh  conversational_cutover.py  crm_embeddings_backfill.py  deploy_wiki.py  draft_pending_research_briefs.py  dream_nightly.py  email_bulk_ingest.py  fix_api_service.ps1  fix_web_service.ps1  index_project.py  ingest_manuals.py  install_scheduled_tasks.ps1  install_services.ps1  lint_web_env_reads.py  new_project.py  nudge_stalled_projects.py  nudges_cutover.py  poll_arxiv.py  process_cairn_inbox.py  process_memory_brief_replies.py  process_sent_folder.py  process_triage_replies.py  remove_services.ps1  run_telegram_poller.py  scrape_docs.py  send_memory_brief.py  send_pending_nudges.py  setup.ps1  setup_tray.ps1  start_api.cmd  (+8 more)
(+418 files in other folders)
